// Copyright (c) 2019-present, Facebook, Inc.
// All rights reserved.
//
// This source code is licensed under the BSD-style license found in the
// LICENSE file in the root directory of this source tree. An additional grant
// of patent rights can be found in the PATENTS file in the same directory.

syntax = "proto3";

package eap;
option go_package = "magma/feg/gateway/services/eapauth/protos";

enum eap_type { // also known as EAP Methods
    // Mandatory EAP Method types
    Reserved = 0;
    Identity = 1;
    Notification = 2;
    Legacy_Nak = 3;
    MD5_Challenge = 4;

    Expanded = 254;
    Experimental= 255;

    // EAP Method Authenticator types
    TLS = 13;
    SIM = 18;
    AKA = 23;
    AKAPrime = 50;
}

enum eap_code {
    Undefined = 0;
    Request = 1;
    Response = 2;
    Success = 3;
    Failure = 4;
}

message eap_context {
    // TBD
}

message eap_message {
    bytes payload = 1;
}

message eap_request {
    bytes payload = 1;
    eap_context ctx = 2;
}

message eap_success {
    bytes data = 1;
    bytes master_session_key = 2;
}

message eap_intermediate_resp {
    bytes data = 1;
    uint32 identifier = 2;
}

message eap_result {
    oneof payload {
        eap_intermediate_resp response = 1;
        eap_success success = 2;
    }
    eap_context ctx = 3;
}

service eap_service {
    rpc handle(eap_request) returns (eap_result) {}
}
